--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,6 @@
-lib-cov
-*.seed
-*.log
-*.csv
-*.dat
-*.out
-*.pid
-*.gz
-*.sublime-project
-*.sublime-workspace
-
-pids
-logs
-results
-
-npm-debug.log
-node_modules
-
-client/client.js*
+old
+client.js*
 vendor
 gin-bin
 distributed-particle-system
+bindata_assetfs.go
